// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Abstract does not display abstractSource when it is null 1`] = `
<div>
  <div>
    Abstract:
  </div>
  <Latex>
    Test abstract
  </Latex>
</div>
`;

exports[`Abstract does not render if abstract is null 1`] = `""`;

exports[`Abstract renders with abstract 1`] = `
<div>
  <div>
    Abstract:
    <span>
       (
      arXiv
      )
    </span>
  </div>
  <Latex>
    Test abstract
  </Latex>
</div>
`;
